# scidavis

./: CMakeLists.txt  Doxyversion  SECURITY.md  makeDist.sh  makeMsi.sh  makeRelease.sh  mkMacDist.sh
.github/workflows/: main.yml
cmake/: FindPyQt.cmake  FindSIP.cmake
fitPlugins/exp_saturation/: CMakeLists.txt
fitPlugins/explin/: CMakeLists.txt
fitPlugins/fitRational0/: CMakeLists.txt
fitPlugins/fitRational1/: CMakeLists.txt
fitPlugins/planck_wavelength/: CMakeLists.txt
libscidavis/: CMakeLists.txt
libscidavis/src/: ApplicationWindow.cpp  ApplicationWindow.h  ConfigDialog.cpp  Convolution.cpp  Convolution.h  Correlation.cpp  Differentiation.cpp  ExpDecayDialog.cpp  FFT.cpp  FFTFilter.cpp  FFTFilter.h  Filter.cpp  Filter.h  Fit.cpp  FitDialog.cpp  Graph.cpp  Graph.h  IntDialog.cpp  Integration.cpp  Interpolation.cpp  Interpolation.h  InterpolationDialog.cpp  Matrix.cpp  Matrix.h  MultiLayer.cpp  MultiPeakFit.cpp  Plot.cpp  PlotDialog.cpp  PolynomFitDialog.cpp  PolynomialFit.cpp  PythonScripting.cpp  SigmoidalFit.cpp  SmoothFilter.cpp  SmoothFilter.h  Table.cpp  importOPJ.cpp  project.py  pyproject.toml  scidavis.sip  version.cpp
libscidavis/src/future/matrix/: MatrixView.cpp  MatrixView.h
libscidavis/src/future/table/: future_Table.cpp
obsCheck/: Dockerfile-leap
scidavis/: CMakeLists.txt  scidavis.appdata.xml  scidavis.desktop
scidavis/src/: main.cpp
scidavis/translations/: scidavis_cs-alt.ts  scidavis_cs.ts  scidavis_de.ts  scidavis_es.ts  scidavis_fr.ts  scidavis_ja.ts  scidavis_pl.ts  scidavis_pt-br.ts  scidavis_ru.ts  scidavis_sv.ts  scidavis_zh-cn.ts  scidavis_zh-tw.ts
test/: CMakeLists.txt
test/00/: regression.sh
test/menuData/: appWithGraphen.menudat  defaultMenus_en.menudat
